# cd1-agent

./: .gitignore  .pypirc.example  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.server.yml  pyproject.toml  temp.md
.claude/commands/: build.md  gcp.md
conf/baselines/eks/: production-cluster.json
conf/schemas/: hitl_mysql.sql
dags/: bdp_cost_detection_dag.py  bdp_detection_dag.py  bdp_drift_detection_dag.py  bdp_hdsp_detection_dag.py
docs/: ARCHITECTURE.md  BDP_COMPACT.md  BDP_COST.md  BDP_DETECTION.md  CONFIG_DRIFT_DETECTION.md  COST_ANOMALY_DETECTION.md  COST_OPTIMIZATION.md  HDSP_DETECTION.md  IMPLEMENTATION_GUIDE.md  INTERACTIVE_CHAT.md  PROMPTS.md  build.md
docs/bdp_compact_agent/: architecture.md  improvements.md
docs/bdp_cost_agent/: README.md  architecture.md  improvements.md  testing.md
docs/bdp_cost_agent/deployment/: fastapi.md  lambda.md
docs/bdp_cost_agent/detection/: algorithm.md  pattern_aware.md  severity.md
docs/bdp_cost_agent/integration/: eventbridge.md  hitl.md  kakao.md  schema.md
docs/drift_agents/: BASELINE_CONFIG_INSERTION_GUIDE.md  CONFIG_DRIFT_TESTING_GUIDE.md
docs/hdsp_monitoring/: README.md  architecture.md  configuration.md  kakao_setup.md  severity_levels.md  troubleshooting.md
examples/handlers/: __init__.py  analysis_handler.py  base_handler.py  cost_detection_handler.py  detection_handler.py
examples/prompts/: __init__.py  analysis_prompts.py
examples/services/: __init__.py  aws_client.py  bedrock_client.py  cost_anomaly_detector.py  cost_explorer_client.py  llm_client.py  reflection_engine.py
infra/bdp_compact_agent/: Makefile  docker-compose.yml
infra/bdp_compact_agent/init/: 01-create-tables.sh  02-setup-eventbridge.sh  03-inject-baseline.sh
infra/bdp_compact_agent/scenarios/: athena-spike.sh  multi-account-drift.sh
infra/bdp_cost_agent/: Makefile  docker-compose.yml
infra/bdp_cost_agent/init/: 02-setup-eventbridge.sh  03-inject-baseline.sh
infra/bdp_cost_agent/scenarios/: athena-spike.sh  lambda-spike.sh  multi-account-drift.sh
infra/localstack/: Makefile  docker-compose.yml
infra/localstack/init/: 01-create-tables.sh  02-setup-eventbridge.sh  hitl-schema.sql
issues/: bdp_compact_issue.md  tasks.md
k8s/base/: configmap.yaml  deployment-bdp.yaml  deployment-cost.yaml  deployment-drift.yaml  deployment-hdsp.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  secret.yaml  serviceaccount.yaml
layer/python/annotated_types-0.7.0.dist-info/: RECORD
layer/python/anyio-4.12.1.dist-info/: RECORD
layer/python/boto3-1.42.30.dist-info/: RECORD
layer/python/botocore-1.42.30.dist-info/: RECORD
layer/python/cd1_agent-0.1.0.dist-info/: METADATA  RECORD  entry_points.txt
layer/python/certifi-2026.1.4.dist-info/: RECORD
layer/python/charset_normalizer-3.4.4.dist-info/: RECORD
layer/python/exceptiongroup-1.3.1.dist-info/: RECORD
layer/python/h11-0.16.0.dist-info/: RECORD
layer/python/httpcore-1.0.9.dist-info/: RECORD
layer/python/httpx-0.28.1.dist-info/: RECORD
layer/python/idna-3.11.dist-info/: RECORD
layer/python/jmespath-1.0.1.dist-info/: RECORD
layer/python/jsonpatch-1.33.dist-info/: RECORD
layer/python/jsonpointer-3.0.0.dist-info/: RECORD
layer/python/langchain_core-0.3.83.dist-info/: RECORD
layer/python/langgraph-0.6.11.dist-info/: RECORD
layer/python/langgraph_checkpoint-2.1.2.dist-info/: RECORD
layer/python/langgraph_prebuilt-0.6.5.dist-info/: RECORD
layer/python/langgraph_sdk-0.2.9.dist-info/: RECORD
layer/python/langsmith-0.4.37.dist-info/: RECORD
layer/python/orjson-3.11.5.dist-info/: RECORD
layer/python/ormsgpack-1.11.0.dist-info/: RECORD
layer/python/packaging-25.0.dist-info/: RECORD
layer/python/pydantic-2.12.5.dist-info/: RECORD
layer/python/pydantic_core-2.41.5.dist-info/: RECORD
layer/python/python_dateutil-2.9.0.post0.dist-info/: RECORD
layer/python/pyyaml-6.0.3.dist-info/: RECORD
outputs/: drift_report_test.html  hdsp_alert_report.html
reports/: scenario_report.html
schema.example/: README.md
schema.example/tables/: anomaly_logs.json  remediation_history.json  service_metrics.json
schemas/: drift_baseline_mysql.sql  drift_baseline_sqlite.sql  hitl_sqlite.sql
scripts/: build_lambda_layer.sh  build_wheel.sh  publish_codeartifact.sh  send_athena_alert.py  send_daily_report.py  test_drift_html_report.py  test_hdsp_monitoring_report.py  test_kakao_chart.py
src/: __init__.py
src/agent/: __init__.py  executor.py  graph.py  nodes.py  rds_tools.py  tools.py
src/agents/bdp_compact/: .gitignore  __init__.py  handler.py  proxy_config.json.example  pyproject.toml  server.py
src/agents/bdp_compact/conf/: detection_config.json  eventbridge_config.json  kakao_config.json
src/agents/bdp_compact/scripts/: build_lambda_layer.sh
src/agents/bdp_compact/services/: __init__.py  anomaly_detector.py  event_publisher.py  kakao_notifier.py  multi_account_provider.py  pattern_recognizers.py  summary_generator.py
src/agents/bdp_drift/: Makefile  __init__.py  handler.py  pyproject.toml  server.py
src/agents/bdp_drift/bdp_drift/: __init__.py
src/agents/bdp_drift/bdp_drift/services/: __init__.py  baseline_store.py  chart_generator.py  config_fetcher.py  drift_detector.py  html_report_generator.py  models.py  summary_generator.py
src/agents/bdp_drift/conf/: detection_config.json  eventbridge_config.json
src/agents/bdp_drift/conf/schema/: drift_baselines.sql
src/common/: __init__.py
src/handlers/: __init__.py  analysis_handler.py  base_handler.py  detection_handler.py  remediation_handler.py
src/models/: __init__.py  analysis_result.py  anomaly.py
src/prompts/: __init__.py  replan_prompts.py  utils.py
src/services/: __init__.py  aws_client.py  llm_client.py  schema_loader.py
step_functions/: bdp_cost_workflow.asl.json  bdp_drift_workflow.asl.json  bdp_hdsp_workflow.asl.json  bdp_workflow.asl.json
tests/: __init__.py  conftest.py  test_agent.py  test_handlers.py  test_models.py  test_prompts.py  test_schema_loader.py  test_services.py
tests/server/: test_adapter.py  test_api.py  test_config.py  test_hitl.py
(+225 files in other folders)
