[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cd1-agent"
version = "0.1.0"
description = "AWS Lambda-based intelligent log analysis and auto-remediation system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
    {name = "CD1 Team"}
]
keywords = ["aws", "lambda", "langgraph", "anomaly-detection", "remediation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic>=2.0.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.0.30",
    "boto3>=1.28.0",
]

[project.scripts]
cd1-agent = "src.cli:main"
cd1-bdp = "src.agents.bdp.handler:handler"
cd1-cost = "src.agents.cost.handler:handler"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]
luminol = [
    "luminol>=0.4",
]
vllm = [
    "openai>=1.0.0",  # vLLM uses OpenAI-compatible API
    "httpx>=0.25.0",
]
gemini = [
    "google-generativeai>=0.3.0",
]
rds = [
    "pymysql>=1.1.0",
    "cryptography>=41.0.0",
]
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.0.0",
    "prometheus-client>=0.21.0",
    "httpx>=0.27.0",
]
lambda-layer = [
    # Minimal dependencies for Lambda Layer
    "pydantic>=2.0.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.0.30",
    "boto3>=1.28.0",
]
all = [
    "cd1-agent[luminol,vllm,gemini,rds,server]",
]

[project.urls]
Homepage = "https://github.com/lks21c/cd1-agent"
Documentation = "https://github.com/lks21c/cd1-agent#readme"
Repository = "https://github.com/lks21c/cd1-agent"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "llm: Tests requiring LLM",
    "aws: Tests requiring AWS services",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py313"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "build/",
]
