[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bdp-compact"
version = "0.1.0"
description = "BDP Compact Agent - Multi-Account Cost Drift Detection"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "CD1 Agent Team", email = "cd1-agent@example.com"},
]
keywords = ["aws", "cost", "anomaly-detection", "pyod", "ecod"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]

# Core dependencies (Lambda layer minimal)
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# AWS SDK - excluded from Lambda layer (runtime provides boto3)
aws = [
    "boto3>=1.34.0",
]
# ML dependencies - PyOD ECOD anomaly detection (optional, has ratio fallback)
ml = [
    "pyod>=2.0.0",
]
# Server dependencies
server = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
# Full installation for Container/Pod deployment
full = [
    "bdp-compact[aws,ml,server]",
]
# All including dev
all = [
    "bdp-compact[full,dev]",
]

[project.scripts]
bdp-compact = "bdp_compact.server:main"

[project.urls]
Homepage = "https://github.com/cd1-agent/bdp-compact"
Documentation = "https://github.com/cd1-agent/bdp-compact#readme"
Repository = "https://github.com/cd1-agent/bdp-compact"

[tool.setuptools.packages.find]
where = ["."]
include = ["bdp_compact*"]
exclude = ["tests*", "scripts*"]

[tool.setuptools.package-data]
bdp_compact = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
